Removed social tags

--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ menu:
     url:               /index/
   - title:             Lessons
     url:               /blog/
-  - title:             Projects
+  - title:             Exercises
     url:               /projects/
   - title:             Resources
     url:               /publications/
