--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/Kieran_Didi_Circle.png
+logo:                  /assets/img/lessons/pymol_logo.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
@@ -97,7 +97,7 @@ theme: jekyll-theme-hydejack
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/BCK-IMAGE.png
+accent_image:          /assets/img/lessons/pymol_background.png
 accent_color:          rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
