Changed config description

--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ title:                 Structural Bioinformatics
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Master's student interested in Protein Design, AI and bioinformatics. 
-  Blogging about papers, tools and experiences in the CompBio space.
+  Course about protein structure analysis and other cool things like Protein Design,
+  Simulations and Visualisation.
 
 
 # A shorter description for the sidebar.
